# PatchCleanerAI

./: .gitignore  README.md  pyproject.toml
doc/: ARCHITECTURE.md
patchclean/: __init__.py  __main__.py  actions.py  ai_advisor.py  analyzer.py  cli.py  config.py  models.py  msi_query.py  scanner.py  squid.py
